--- a/nginx.conf
+++ b/nginx.conf
@@ -41,5 +41,11 @@ http {
             proxy_set_header X-Forwarded-Host   $server_name;
             proxy_set_header X-Real-IP          $remote_addr;
         }
+
+        #readycheck
+        location /ready {
+            return 200;
+        }
+
     }
 }
