chore: reverted some changes

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,6 @@
+worker_processes auto;
+user www www;
+
 events {
     worker_connections 1024;
 }
@@ -42,8 +45,8 @@ http {
             proxy_set_header X-Real-IP          $remote_addr;
         }
 
-        #readycheck
-        location /ready {
+        #healthcheck
+        location /health {
             return 200;
         }
 
