chore: fixed unnecessary /

--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,7 @@ http {
 
         ## Main site location.
         location /fdk-model-publisher {
-            rewrite                             /fdk-model-publisher(.*) /$1 break;
+            rewrite                             /fdk-model-publisher(.*) $1 break;
             proxy_pass                          http://fdk-model-publisher:8080;
             proxy_set_header                    Host $host;
             proxy_set_header X-Forwarded-Host   $server_name;
