chore: fixed unnecessary /, added ping/ready paths

--- a/nginx.conf
+++ b/nginx.conf
@@ -45,7 +45,12 @@ http {
         }
 
         #healthcheck
-        location /health {
+        location /ready {
+            return 200;
+        }
+
+        #livenesscheck
+        location /ping {
             return 200;
         }
 
