chore: added workflows for all environments (#1)
* chore: added workflows for all environments, modified nginx.conf, added ping/ready paths

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 worker_processes auto;
-user www www;
+
 events {
     worker_connections 1024;
 }
@@ -7,7 +7,7 @@ http {
     ## Main Server Block
     server {
         ## Open by default.
-        listen                80;
+        listen                8080;
         server_name           default_server;
         client_max_body_size  200M;
 
@@ -37,11 +37,22 @@ http {
 
         ## Main site location.
         location /fdk-model-publisher {
-            rewrite                             /fdk-model-publisher(.*) /$1 break;
+            rewrite                             /fdk-model-publisher(.*) $1 break;
             proxy_pass                          http://fdk-model-publisher:8080;
             proxy_set_header                    Host $host;
             proxy_set_header X-Forwarded-Host   $server_name;
             proxy_set_header X-Real-IP          $remote_addr;
         }
+
+        #healthcheck
+        location /ready {
+            return 200;
+        }
+
+        #livenesscheck
+        location /ping {
+            return 200;
+        }
+
     }
 }
