--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -26,7 +26,7 @@ jobs:
         run: docker build . -t eu.gcr.io/digdir-fdk-infra/fdk-nginx-publishers:$GITHUB_SHA -t eu.gcr.io/digdir-fdk-infra/fdk-nginx-publishers:latest
 
       - name: Publish docker image to Google Cloud
-        run: docker -- push eu.gcr.io/digdir-fdk-infra/fdk-nginx-publishers
+        run: docker -- push eu.gcr.io/digdir-fdk-infra/fdk-nginx-publishers -a
 
       - name: Apply Helm template
         run: |
